fixes overflow issue for mobile nav

--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -63,6 +63,9 @@ header {
   &.about-page-background {
     background: url(../img/case-study.jpg) no-repeat 0 center fixed;
   }
+  #menuToggle {
+    overflow-x: hidden;
+  }
 
 }
 
@@ -443,7 +446,7 @@ input {
   
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
-
+ 
 #menu li
 {
   padding: 10px 0;
